test/cli/scenarios_to_cli/other/scenario_validate_healthChecks/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    test: probe
  name: probe
spec:
  containers:
  - name: check-readiness
    image: registry.k8s.io/busybox
    args:
    - /bin/sh
    - -c
    - touch /tmp/healthy; sleep 30; rm -rf /tmp/healthy; sleep 600
    readinessProbe:
      successThreshold: 3
      exec:
        command:
        - cat
        - /tmp/healthy
  - name: check-liveness
    image: registry.k8s.io/liveness
    args:
    - /server
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
        scheme: HTTP
        httpHeaders:
        - name: Custom-Header
          value: Awesome
      periodSeconds: 3
